Consertado bug de overflow na seção Aboutme

--- a/index.css
+++ b/index.css
@@ -633,6 +633,7 @@ hr {
   }
 
   .aboutme-container{
+    overflow: hidden;
     flex-direction: column;
     padding: 0 30px;
     align-items: start;
@@ -682,6 +683,7 @@ hr {
   }
   
   .p2-aboutme{
+    overflow: hidden;
     font-weight: 500;
     text-align: left;
     margin-bottom: 15px;
